add params when executing tests to reduce garbage and increase max perm gen space